chore: merge 과정 중 사라진 정적 팩토리 메서드 재작성 및 관련 코드 수정